Added-folder-structure-and-theme

--- a/pinot-controller/src/main/resources/app/index.html
+++ b/pinot-controller/src/main/resources/app/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Incubator Pinot</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:300,400,500,600,700&display=swap" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
